Fri Apr 24 14:55:15 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_start_timer): guard condition was inverted.
	  [ruby-dev:38319]

Thu Apr 23 00:19:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (time_mload): initializes a variable.

Wed Apr 22 20:24:01 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (time_timeval): check out-of-range.  [ruby-core:23282]
	  [Bug #1396]

Wed Apr 22 12:20:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (proc_invoke): shares dmethod scope local variables.
	  a patch from coderrr at [ruby-core:23050]

	* gc.c (obj_free): do not free cloned scope local variables.

Tue Apr 21 09:20:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (init_mkmf): needs default library path even if
	  cross compiling.

Sun Apr 19 14:31:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_cleanup): the order of local variables on stack is
	  undefined.  should use outermost VALUE for ruby_init_stack.

	* gc.c (rb_stack_growup_p): returns stack grows up.

	* gc.c (Init_stack, ruby_init_stack): allows volatile pointer.

Sat Apr 18 19:44:53 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (safe_mutex_lock): pthread_cleanup_push() must not be
	  inside parens.

Sat Apr 18 18:25:53 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_remove): stops timer thread unless other
	  threads exist.  [ruby-core:18444]

Thu Apr  9 11:11:10 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/nkf/nkf.c: RDoc typo fixed.  [ruby-core:23170]

Wed Apr  8 13:57:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (Logging.postpone): copy postponed output always.

Mon Apr  6 23:16:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (CFLAGS, CXXFLAGS): override with $cflags and
	  $cxxflags if not given.  [ruby-core:23130]

Fri Apr  3 18:37:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (Init_stack): use ruby_init_stack.  [ruby-dev:34350]
